Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1746

QueryExecState doesn't check for query cancellation or errors

    XMLWordPrintableJSON

Details

    Description

      There are probably other places we should check, but in particular QueryExecState::FetchRowsInternal() doesn't check the query state after evaluating the select statement expressions with GetRowValue(). These means that, e.g., UDFs that call SetError() in the select list will not fail the query.

      Attachments

        Issue Links

          Activity

            People

              sailesh Sailesh Mukil
              skye Skye Wanderman-Milne
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: